Add Max vector shapes to fit Arm SVE better
Co-authored-by: Joshua Zhu <joshua.zhu@arm.com>
Reviewed-by: vlivanov